--- a/Resources/Private/Templates/Extensions/pb_social/Partials/Feed/Provider-instagram.html
+++ b/Resources/Private/Templates/Extensions/pb_social/Partials/Feed/Provider-instagram.html
@@ -1,9 +1,12 @@
-<div class="pb-list-item pb-list-item-instagram pb-hidden" data-type="" data-url="{feed.link}">
-	<div class="image" style="background-image: url({feed.image})"></div>
-	<f:if condition="{feed.text}">
-		<span class="text">{feed.text}</span>
-	</f:if>
-	<div class="icon"></div>
-	<a class="additional-info info-1" href="{feed.link}">{feed.raw.likes.count}</a>
-	<a class="additional-info info-2" href="{feed.link}">{feed.raw.comments.count}</a>
+<div class="pb-list-item item pb-list-item-instagram pb-hidden" data-type="" data-url="{feed.link}">
+	<!--div class="image" style="background-image: url({feed.image})"></div-->
+	<img   src="{feed.image}" />
+	<div class="blackwell">
+		<f:if condition="{feed.text}">
+			<span class="text">{feed.text}</span>
+		</f:if>
+		<div class="icon"></div>
+		<a class="additional-info info-1" href="{feed.link}">{feed.raw.likes.count}</a>
+		<a class="additional-info info-2" href="{feed.link}">{feed.raw.comments.count}</a>
+	</div>
 </div>
