--- a/Resources/Private/Dyncss/import.less
+++ b/Resources/Private/Dyncss/import.less
@@ -34,6 +34,7 @@
 @import "Library/area.footer.less";
 @import "Library/partial.socialmedia.less";
 @import "Library/black.less";
+@import "Library/color.less";
 
 // Styles for Elements
 // @import "Library/Elements/Carousel/carouselLarge.less";
